Repaired recipe box and made it more responsive
Replaced grid in recipe-box with 2 divs so image can stretch dependently on text next to it rather than recipe-box height, added min-width to recipe-box to not squeeze it too much on narrower screens

--- a/style.css
+++ b/style.css
@@ -48,78 +48,10 @@ h1{
     text-align: center;
     width:100%;
     font-weight: 1000;
-    font-size:12vh;
+    font-size:5rem;
     color:white;
     text-shadow: 0 0 15px rgba(0, 0, 0, 1);
 
-}
-
-#new-recipes{
-    display:flex; 
-    justify-content: center;
-    flex-wrap:wrap;
-}
-
-.recipe-box{
-    height:auto;
-    border:#C59A2B 3px solid; width:60%;
-    border-radius:1vw;
-    display:grid;
-    grid-template-columns: 70% 30%;
-    grid-template-rows: auto auto auto;
-    grid-template-areas: 
-    "header img"
-    "text img"
-    "href img";
-    box-sizing:border-box;
-}
-
-.recipe-box h3{
-    grid-area:header;
-    margin:3%;
-    margin-bottom: 0;
-    font-size:2rem;
-    
-}
-
-.recipe-box p{
-    grid-area:text;
-    margin:3%;
-    margin-bottom: 0;
-}
-
-.recipe-box img{
-    grid-area:img;
-    width:100%;
-    border-radius:0 1vw 1vw 0;
-}
-
-.recipe-box a{
-    grid-area:href;
-   text-align:left;
-    margin:3%;
-    margin-top:0;
-}
-
-h2{
-    font-size:3rem;
-    color:#C59A2B;
-    width:100%;
-    text-align:center;
-}
-
-h3{
-    width:70%;
-}
-
-main{
-    width:80%;
-}
-
-footer{
-    height:0px;
-    background-color: rgb(218, 162, 50);
-    /* border-radius: 0 0 1rem 1rem; */
 }
 
 .slideShow{
@@ -162,19 +94,103 @@ footer{
     
 }
 
-@media screen and (max-width: 1000px) {
+#new-recipes{
+    display:flex; 
+    justify-content: center;
+    flex-wrap:wrap;
+}
+
+.recipe-box{
+    
+    border:#C59A2B 3px solid; 
+    width:100%;
+    border-radius:1vw;
+    box-sizing: border-box;
+    display:flex;
+    box-sizing:border-box;
+    margin-bottom:30px;
+}
+
+.recipe-box-text{
+    margin:3%;
+    display:flex;
+    flex-wrap:wrap;
+    align-items: center;
+}
+
+.recipe-box h3{
+    margin: 0;
+    font-size:2rem;
+    
+}
+
+.recipe-box p{
+    margin:0;
+}
+
+.recipe-box img{
+    grid-area:img;
+    width:100%;
+    border-radius:0 0.8vw 0.8vw 0;
+    height:inherit;
+    object-fit:cover;
+    min-width: 200px;
+}
+
+.recipe-box a{
+    grid-area:href;
+   text-align:left;
+    margin-top:0;
+}
+
+h2{
+    font-size:3rem;
+    color:#C59A2B;
+    width:100%;
+    text-align:center;
+    margin:1vw;
+}
+
+h3{
+    width:70%;
+}
+
+main{
+    width:50%;
+    min-width: 650px;
+}
+
+footer{
+    height:0px;
+    background-color: rgb(218, 162, 50);
+}
+
+
+
+@media screen and (max-width: 900px) {
     main{
         width:100%;
+        min-width: 0px;
     }
+
+    h1{
+        font-size: 4rem
+    }
+
     .recipe-box{
+        height:auto;
+        object-fit:none;
         width:80%;
         border-radius:3vw;
-        grid-template-columns: 100%;
-        grid-template-rows: 20% 40% 10% 30%;
-        grid-template-areas: 
-        "header "
-        "text "
-        "href "
-        "img "
+        flex-wrap:wrap;
+    }
+
+    .recipe-box h3{
+        width:100%;
+    }
+
+    .recipe-box img{
+        border-radius:0 0 2.5vw 2.5vw;
+        min-width:0px;
     }
 }
